# OPS

./: .gitignore  task.c
Lab - 2/Example Task/: task.c
Lab - 2/Example Task Lab 2/: Task.c  task
Lab - 2/Last Year/: out.txt  task  task.c
Lab - 2/Retake/: Makefile  task.c
Lab - 2/Tutorial/: prog16b.c
Lab - 3/: example  example.c  prog17  prog17.c  prog18  prog18.c  sop-ca  sop-ca.c  task  task.c
Lab - 3/Lab/: Makefile  sop-ca  sop-ca.c
Lab - 3/Lab/sop-ca.dSYM/Contents/: Info.plist
Lab - 3/Lab/sop-ca.dSYM/Contents/Resources/DWARF/: sop-ca
Lab - 3/prog17.dSYM/Contents/: Info.plist
Lab - 3/prog17.dSYM/Contents/Resources/DWARF/: prog17
Lab - 3/prog17.dSYM/Contents/Resources/Relocations/aarch64/: prog17.yml
Lab - 4/: example.c  example.csv  task  task.c
Lab - 5/Example Tasks/: example.c  smth.c  task60  task60.c  task60myself  task60myself.c  task60smth  task60smth.c  task90  task90.c  task90myself  task90myself.c
Lab - 5/Example Tasks/task60myself.dSYM/Contents/: Info.plist
Lab - 5/Example Tasks/task60myself.dSYM/Contents/Resources/DWARF/: task60myself
Lab - 5/Example Tasks/task90myself.dSYM/Contents/: Info.plist
Lab - 5/Example Tasks/task90myself.dSYM/Contents/Resources/DWARF/: task90myself
Lab - 5/Lab Task/: ops-lab  ops-lab.c
Lab - 5/Tutorial/FIFOs/: prog21_c  prog21_c.c  prog21a_s  prog21a_s.c  prog21b_s  prog21b_s.c
Lab - 5/Tutorial/Pipe/: prog22a  prog22a.c
Lab - 6/: example  example.c  marcel  marcel.c
Lab - 6/Example Task/: task  task.c
Lab - 6/Example Task/task_programs/: client  client.c  server  server.c
Lab - 6/Tutorial/: Bingo  Bingo.c
Lab - 7/: examp.c  secondexamp.c
Lab - 7/Example/: Makefile  task  task.c
Lab - 7/Tutorial/: client  client.c  log.txt  prog1  prog1.c  server  server.c
Lab - 8/: 1_client_local  1_client_local.c  1_client_tcp  1_client_tcp.c  1_server  1_server.c  2_client.c  2_server.c  anotherone.c  common.h  data  l4a  l4a.c  l4b  l4b.c  sop-chat (1).c  website_client  website_client.c  website_server  website_server.c
Lecture Codes/: .gitignore  CMakeLists.txt
Lecture Codes/01_pipes/: 01_pipe_creation.c  02_pipe_to_child.c  03_pipe_to_parent.c  04_pipe_stream_to_parent.c  05_epipe.c  06_epipe_with_handler.c  07_read_close.c  08_write_sticking.c  09_pipe_capacity.c  10_pipebuf.c  11_fifo_creation.c  12_fifo_communication.c  13_fifo_deadlock.c  CMakeLists.txt
Lecture Codes/02_mqueue/: 01_mqueue_creation.c  02_default_attributes.c  03_create_attributes.c  04_queue_capacity.c  05_no_eof.c  06_timeouts.c  07_priority.c  08_async_notification_signal.c  09_async_notification_thread.c  10_mmap.c  11_shm.c  12_sysv_msg.c  13_sysv_shm.c  CMakeLists.txt
Lecture Codes/03_synchro/: 01_base.c  02_peterson.c  03_peterson_atomic.c  04_atomic_swap.c  05_atomic_test_and_set.c  06_mutex.c  07_semaphore.c  08_bounded_buffer.c  09_reades_writers.c  10_java_monitors.java  11_sem_open.c  12_sem_in_shm.c  13_mtx_attributes.c  14_mtx_in_shm.c  16_dining_philosophers.c  99_reordering.c  CMakeLists.txt  README.md
Lecture Codes/04_net/: 00_intro.md  01_base.c  02_addr.c  03_pton.c  04_getaddrinfo.c  05_udp.c  06_udp_eph.c  07_tcp.c  08_tcp_forked.c  09_tcp_epipe.c  10_select.c  11_epoll.c  CMakeLists.txt
Lecture Codes/05_memory/: compilation.md  dynamic_rt.c  hello.c  hello.h  main.c
Lecture Codes/06_fs/: CMakeLists.txt  README.md  fuse_hello.c
(+3 files in other folders)
