cmake_minimum_required(VERSION 3.10)

add_executable(01pipes_01_pipe_creation 01_pipe_creation.c)
add_executable(01pipes_02_pipe_to_child 02_pipe_to_child.c)
add_executable(01pipes_03_pipe_to_parent 03_pipe_to_parent.c)
add_executable(01pipes_04_pipe_stream_to_parent 04_pipe_stream_to_parent.c)
add_executable(01pipes_05_epipe 05_epipe.c)
add_executable(01pipes_06_epipe_with_handler 06_epipe_with_handler.c)
add_executable(01pipes_07_read_close 07_read_close.c)
add_executable(01pipes_08_write_sticking 08_write_sticking.c)
add_executable(01pipes_09_pipe_capacity 09_pipe_capacity.c)
add_executable(01pipes_10_pipebuf 10_pipebuf.c)
add_executable(01pipes_11_fifo_creation 11_fifo_creation.c)
add_executable(01pipes_12_fifo_communication 12_fifo_communication.c)
add_executable(01pipes_13_fifo_deadlock 13_fifo_deadlock.c)
